--- a/PasswordServerAPI_Project/PasswordServerUI/ClientApp/src/app/ui/main-panel/editor/editor.component.scss
+++ b/PasswordServerAPI_Project/PasswordServerUI/ClientApp/src/app/ui/main-panel/editor/editor.component.scss
@@ -73,7 +73,3 @@
     }
   }
 }
-
-.slideContainer {
-  background-color: map-get($colorPalette, "subCardBackground");
-}
